--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitrine Digital</title>
+    <title>Vitrine Digital 2.0</title>
     <link  href="CSS/normalize.css" rel="stylesheet">
     <link  href="CSS/reset.css" rel="stylesheet">
     <link  href="CSS/style.css" rel="stylesheet">
@@ -17,8 +17,8 @@
                     <a href="">Início</a>
                     <a href="">Promoções</a>
                     <a href="">Contato</a>
-        
             </nav>
+
         </header>
         <main class="conteudo">
             <section class="destaques ">
